# PAO

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DF01-remediation-PAO.md  README.md  pyproject.toml
.agents/: verify_skills.py
.claude-plugin/: marketplace.json
.github/: pull_request_template.md  repository-policy-credential.json  repository-policy.json
.pgf/: DESIGN-PAO.md  DESIGN-PAOADP.md  DESIGN-PAOErrorHardening.md  DESIGN-PAOPlugin.md  DESIGN-PAOSkills.md  DESIGN-PAOSkillsV11.md  DESIGN-PAOSkillsV12.md  REVIEW-PAOADP.md  REVIEW-PAOErrorHandling.md  SOAK-PAOSkillsV11-round1.md  SOAK-PAOSkillsV11-round2.md  SOAK-PAOSkillsV12-multiLWAR.md  WORKPLAN-PAOADP.md  WORKPLAN-PAONext.md  WORKPLAN-PAOPlugin.md  WORKPLAN-PAOPortable.md  WORKPLAN-PAOSkills.md  WORKPLAN-PAOSkillsV11.md  status-PAOADP.json  status-PAONext.json  status-PAOPlugin.json  status-PAOPortable.json  status-PAOSkills.json  status-PAOSkillsV11.json  (+1 more)
PAO_plugin/: README.md  pyproject.toml
PAO_plugin/.claude-plugin/: plugin.json
PAO_plugin/commands/: lwar-adp.md  lwar-drain.md  lwar-off.md  lwar-on.md  lwar-register.md  lwar-status.md  lwar-unregister.md  oa.md
PAO_plugin/docs/: LWAR_ADP_Bootstrap.md  PAO_TechSpec.md
PAO_plugin/pao_runtime/: __init__.py  adp_watch.py  ledger.py  pao_cli.py  routing.py  transport.py
PAO_plugin/skills/lwar-runtime/: SKILL.md
PAO_plugin/skills/lwar-runtime/references/: adp-contract.md
PAO_plugin/skills/lwar-runtime/schemas/: registration-request.schema.json  result.schema.json  task.schema.json
PAO_plugin/skills/oa-runtime/: SKILL.md
(+146 files in other folders)
